sass/components/_quote.scss
.quote {
    background-color: $color-dark-green;
    height: 350px;
    color: $color-white;
    &__wrapper {
        display: flex;
        justify-content: center;
        align-items: center;
        height: 100%;
    }
    &__text {
        padding: 0 2rem;
        width: 50%;
        text-align: end;
    }
    &__img {
        border-radius: 50%;
    }
    &__footer {
        color: $color-gray;
        padding: 2rem 0;
    }
}

@media only screen and(max-width: 1030px) {
    .quote {
        &__text {
            width: 80%;
        }
    }
}

@media only screen and(max-width: 800px) {
    .quote {
        padding: 2rem 0;
        flex-direction: column-reverse;
        &__text {
            display: flex;
            flex-direction: column-reverse;
            text-align: center;
        }
    }
}

